# CrewAI

email_generator(crews,agents,tasks)/c_a_t/: email.txt  pyproject.toml
email_generator(crews,agents,tasks)/c_a_t/src/c_a_t/: __init__.py  main.py
email_generator(crews,agents,tasks)/c_a_t/src/c_a_t/crews/: agentia_crew.py
email_generator(crews,agents,tasks)/c_a_t/src/c_a_t/crews/config/: agents.yaml  tasks.yaml
multiple_agents/: README.md  pyproject.toml
multiple_agents/src/multiple_agents/: main1.py
multiple_agents/src/multiple_agents/crews/dev_crew/: dev_crew.py
multiple_agents/src/multiple_agents/crews/dev_crew/config/: agents.yaml  tasks.yaml
multiple_agents_wih_two_llms/: README.md  pyproject.toml
multiple_agents_wih_two_llms/src/multiple_agents_wih_two_llms/: main.py
multiple_agents_wih_two_llms/src/multiple_agents_wih_two_llms/crews/dev_crew/: dev_crew.py
multiple_agents_wih_two_llms/src/multiple_agents_wih_two_llms/crews/dev_crew/config/: agents.yaml
parallelization/: pyproject.toml
parallelization/src/parallelization/: __init__.py  main.py
poemflow-agent/poemflow/: README.md  poem.txt  pyproject.toml
poemflow-agent/poemflow/src/poemflow/: main.py
prompt_chaining/: outline.txt  pyproject.toml
prompt_chaining/src/prompt_chaining/: __init__.py  main.py
router/: outline.txt  pyproject.toml
router/src/router/: __init__.py  main.py
ultraviolet/myproject2/: pyproject.toml
ultraviolet/myproject2/src/myproject2/: __init__.py  hello.py
