[project]
name = "parallelization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "suhaibshaikh03", email = "suhaibshaikh2003@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.100.1",
    "litellm>=1.59.8",
]

[project.scripts]
parallelization = "parallelization:main"
kickoff = "parallelization.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
