[project]
name = "prompt-chaining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "suhaibshaikh03", email = "suhaibshaikh2003@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
    "litellm>=1.59.8",
]

[project.scripts]
prompt-chaining = "prompt_chaining:main"
kickoff = "prompt_chaining.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
