[project]
name = "c-a-t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "suhaibshaikh03", email = "suhaibshaikh2003@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
c-a-t = "c_a_t:main"
kickoff = "c_a_t.main:kickoff"
plot = "c_a_t.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
